// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should build \`custom-dist\` package 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const VERSION = \\"1.0.0\\";
exports.VERSION = VERSION;
//# sourceMappingURL=index.cjs.map
"
`;

exports[`should build \`custom-dist\` package 2`] = `
"const VERSION = \\"1.0.0\\";
export { VERSION };
//# sourceMappingURL=index.js.map
"
`;

exports[`should build \`custom-dist\` package 3`] = `
"/** @public */
export declare const VERSION = '1.0.0'

export {}
"
`;

exports[`should build \`dummy-module\` package 1`] = `
"/** @public */
export declare const format: string

/** @public */
export declare const path: string

/** @public */
export declare const runtime: string

export {}
"
`;

exports[`should build \`dummy-module\` package 2`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const format = \\"commonjs\\";
const runtime = \\"*\\";
const path = \\"dist/index.cjs\\";
exports.format = format;
exports.path = path;
exports.runtime = runtime;
//# sourceMappingURL=index.cjs.map
"
`;

exports[`should build \`dummy-module\` package 3`] = `
"const format = \\"esm\\";
const runtime = \\"*\\";
const path = \\"dist/index.js\\";
export { format, path, runtime };
//# sourceMappingURL=index.js.map
"
`;

exports[`should build \`dummy-module\` package 4`] = `
"const format = \\"esm\\";
const runtime = \\"browser\\";
const path = \\"dist/index.browser.js\\";
export { format, path, runtime };
//# sourceMappingURL=index.browser.js.map
"
`;

exports[`should build \`dummy-module\` package 5`] = `
"/** @public */
export declare const format: string

/** @public */
export declare const path: string

/** @public */
export declare const runtime: string

export {}
"
`;

exports[`should build \`dummy-module\` package 6`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const format = \\"commonjs\\";
const runtime = \\"*\\";
const path = \\"dist/extra.cjs\\";
exports.format = format;
exports.path = path;
exports.runtime = runtime;
//# sourceMappingURL=extra.cjs.map
"
`;

exports[`should build \`dummy-module\` package 7`] = `
"const format = \\"esm\\";
const runtime = \\"*\\";
const path = \\"dist/extra.js\\";
export { format, path, runtime };
//# sourceMappingURL=extra.js.map
"
`;

exports[`should build \`dummy-module\` package 8`] = `
"const format = \\"esm\\";
const runtime = \\"browser\\";
const path = \\"dist/extra.browser.js\\";
export { format, path, runtime };
//# sourceMappingURL=extra.browser.js.map
"
`;

exports[`should build \`multi-export\` package 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
function defineConfig(options) {
  return options;
}
function definePlugin(plugin) {
  return plugin;
}
exports.defineConfig = defineConfig;
exports.definePlugin = definePlugin;
//# sourceMappingURL=index.cjs.map
"
`;

exports[`should build \`multi-export\` package 2`] = `
"function defineConfig(options) {
  return options;
}
function definePlugin(plugin) {
  return plugin;
}
export { defineConfig, definePlugin };
//# sourceMappingURL=index.js.map
"
`;

exports[`should build \`multi-export\` package 3`] = `
"/** @public */
export declare interface Config extends Plugin_2 {
  plugins?: Plugin_2[]
}

/** @public */
export declare function defineConfig(options: Config): Config

/** @public */
export declare function definePlugin(plugin: Plugin_2): Plugin_2

/** @public */
declare interface Plugin_2 {
  name: string
}
export {Plugin_2 as Plugin}

export {}
"
`;

exports[`should build \`multi-export\` package 4`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
var multiExport = require('multi-export');
function plugin() {
  return multiExport.definePlugin({
    name: \\"plugin\\"
  });
}
exports.plugin = plugin;
//# sourceMappingURL=plugin.cjs.map
"
`;

exports[`should build \`multi-export\` package 5`] = `
"import { definePlugin } from 'multi-export';
function plugin() {
  return definePlugin({
    name: \\"plugin\\"
  });
}
export { plugin };
//# sourceMappingURL=plugin.js.map
"
`;

exports[`should build \`multi-export\` package 6`] = `
"/** @public */
export declare function plugin(): Plugin_2

/** @public */
declare interface Plugin_2 {
  name: string
}

export {}
"
`;

exports[`should build \`ts\` package 1`] = `
"/**
 * @internal
 */
export declare interface _Dummy {
  field: string
}

/**
 * @public
 */
export declare interface IncludedModuleDummy {
  field: string
}

/** @public */
export declare const VERSION = '1.0.0'

export {}

declare module './module2' {
  interface IncludedModuleDummy {
    addedField: string
  }
}
//# sourceMappingURL=module1.d.ts.map
"
`;

exports[`should build \`ts-node16\` package 1`] = `
"/**
 * @internal
 */
export declare interface _Dummy {
  field: string
}

/**
 * @public
 */
export declare interface IncludedModuleDummy {
  field: string
}

/** @public */
export declare const VERSION = '1.0.0'

export {}

declare module './module2.js' {
  interface IncludedModuleDummy {
    addedField: string
  }
}
//# sourceMappingURL=module1.d.ts.map
"
`;
